service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
